harbor/nginx-harbor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-harbor-service
  namespace: harbor
spec:
  selector:
    app: nginx-harbor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
